Correction des appels des pages mal nommées dans les twig + migration/migrate faits !

--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -69,7 +69,7 @@
                 <a href="{{ path('app_category_edit', {'id': category.id}) }}" class="btn btn-warning">
                     <i class="bi bi-pencil"></i> Modifier
                 </a>
-                {{ include('category/delete_form.html.twig') }}
+                {{ include('category/delete.html.twig') }}
             </div>
         </div>
     </div>
