--- a/templates/commande/confirmation.html.twig
+++ b/templates/commande/confirmation.html.twig
@@ -49,7 +49,7 @@
             </div>
 
             <div class="mt-4 text-center">
-                <a href="{{ path('app_produit_catalogue') }}" class="btn btn-primary">Retour au catalogue</a>
+                <a href="{{ path('app_catalogue') }}" class="btn btn-primary">Retour au catalogue</a>
                 <a href="{{ path('app_commande_index') }}" class="btn btn-secondary">Voir toutes mes commandes</a>
             </div>
         </div>
