--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -43,6 +43,6 @@
     {% endif %}
 
     <div class="mt-4">
-        <a href="{{ path('app_produit_catalogue') }}" class="btn btn-primary">Retour au catalogue</a>
+        <a href="{{ path('app_catalogue') }}" class="btn btn-primary">Retour au catalogue</a>
     </div>
 {% endblock %}
