--- a/templates/commande/show.html.twig
+++ b/templates/commande/show.html.twig
@@ -49,7 +49,7 @@
 
             <div class="mt-4">
                 <a href="{{ path('app_commande_index') }}" class="btn btn-secondary">Retour aux commandes</a>
-                <a href="{{ path('app_produit_catalogue') }}" class="btn btn-primary">Retour au catalogue</a>
+                <a href="{{ path('app_catalogue') }}" class="btn btn-primary">Retour au catalogue</a>
             </div>
         </div>
     </div>
