--- a/templates/produit/form.html.twig
+++ b/templates/produit/form.html.twig
@@ -15,9 +15,9 @@
     <div class="col-md-6 mb-3">
         {{ form_row(form.category, {'attr': {'class': 'form-select'}}) }}
     </div>
-    <div class="col-md-6 mb-3">
-        {{ form_row(form.isActive, {'attr': {'class': 'form-check-input'}}) }}
-    </div>
+{#    <div class="col-md-6 mb-3">#}
+{#        {{ form_row(form.isActive, {'attr': {'class': 'form-check-input'}}) }}#}
+{#    </div>#}
 </div>
 <div class="mb-3">
     {{ form_row(form.tags, {'attr': {'class': 'form-select'}}) }}
