--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -18,7 +18,7 @@
                 <a href="{{ path('app_category_index') }}" class="btn btn-secondary">
                     <i class="bi bi-arrow-left"></i> Retour à la liste
                 </a>
-                {{ include('category/delete_form.html.twig') }}
+                {{ include('category/delete.html.twig') }}
             </div>
         </div>
     </div>
