--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -16,10 +16,10 @@
             </div>
 
             <div class="mt-3 d-flex gap-2">
-                <a href="{{ path('app_produit_crud_index') }}" class="btn btn-secondary">
+                <a href="{{ path('app_produit') }}" class="btn btn-secondary">
                     <i class="bi bi-arrow-left"></i> Retour à la liste
                 </a>
-                {{ include('produit/delete_form.html.twig') }}
+                {{ include('produit/delete.html.twig') }}
             </div>
         </div>
     </div>
