--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -15,7 +15,7 @@
             </div>
 
             <div class="mt-3">
-                <a href="{{ path('app_produit_index') }}" class="btn btn-secondary">
+                <a href="{{ path('app_produit') }}" class="btn btn-secondary">
                     <i class="bi bi-arrow-left"></i> Retour à la liste
                 </a>
             </div>
