--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -7,7 +7,7 @@
         <div class="col-lg-8 offset-lg-2">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1><i class="bi bi-box-seam text-primary"></i> {{ produit.nom }}</h1>
-                <a href="{{ path('app_produit_index') }}" class="btn btn-secondary">
+                <a href="{{ path('app_produit') }}" class="btn btn-secondary">
                     <i class="bi bi-arrow-left"></i> Retour
                 </a>
             </div>
@@ -109,7 +109,7 @@
                    class="btn btn-warning">
                     <i class="bi bi-pencil"></i> Modifier
                 </a>
-                {{ include('produit/delete_form.html.twig') }}
+                {{ include('produit/delete.html.twig') }}
             </div>
         </div>
     </div>
