--- a/templates/tag/edit.html.twig
+++ b/templates/tag/edit.html.twig
@@ -18,7 +18,7 @@
                 <a href="{{ path('app_tag_index') }}" class="btn btn-secondary">
                     <i class="bi bi-arrow-left"></i> Retour à la liste
                 </a>
-                {{ include('tag/delete_form.html.twig') }}
+                {{ include('tag/delete.html.twig') }}
             </div>
         </div>
     </div>
