--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -70,7 +70,7 @@
                 <a href="{{ path('app_tag_edit', {'id': tag.id}) }}" class="btn btn-warning">
                     <i class="bi bi-pencil"></i> Modifier
                 </a>
-                {{ include('tag/delete_form.html.twig') }}
+                {{ include('tag/delete.html.twig') }}
             </div>
         </div>
     </div>
