--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -1,4 +1,3 @@
-
 {% extends 'base.html.twig' %}
 
 {% block title %}Liste des produits{% endblock %}
@@ -41,23 +40,28 @@
                             <div class="d-flex flex-wrap gap-1 mb-2">
                                 {% if produit.category %}
                                     <span class="badge bg-info badge-custom">
-                                    <i class="bi bi-folder"></i> {{ produit.category.nom }}
-                                </span>
+                                        <i class="bi bi-folder"></i> {{ produit.category.nom }}
+                                    </span>
                                 {% endif %}
                                 {% for tag in produit.tags %}
                                     <span class="badge bg-secondary badge-custom">
-                                    <i class="bi bi-tag"></i> {{ tag.nom }}
-                                </span>
+                                        <i class="bi bi-tag"></i> {{ tag.nom }}
+                                    </span>
                                 {% endfor %}
                             </div>
                         </div>
-                        <div class="card-footer bg-transparent border-top">
-                            <div class="d-flex gap-2">
-                                <a href="{{ path('app_produit_show', {'id': produit.id}) }}" class="btn btn-sm btn-outline-primary flex-fill">
-                                    <i class="bi bi-eye"></i> Voir
-                                </a>
-                                <a href="{{ path('app_produit_edit', {'id': produit.id}) }}" class="btn btn-sm btn-outline-warning flex-fill">
-                                    <i class="bi bi-pencil"></i> Modifier
+                        <div class="card-footer bg-light">
+                            <div class="d-flex justify-content-between align-items-center gap-2">
+                                <div class="btn-group">
+                                    <a href="{{ path('app_produit_show', {'id': produit.id}) }}" class="btn btn-sm btn-outline-primary">
+                                        <i class="bi bi-eye"></i>
+                                    </a>
+                                    <a href="{{ path('app_produit_edit', {'id': produit.id}) }}" class="btn btn-sm btn-outline-warning">
+                                        <i class="bi bi-pencil"></i>
+                                    </a>
+                                </div>
+                                <a href="{{ path('app_panier_add', {'id': produit.id}) }}" class="btn btn-sm btn-success">
+                                    <i class="bi bi-cart-plus"></i> Ajouter au panier
                                 </a>
                             </div>
                         </div>
